refactor(domain) : Cars 로직 수정 및 테스트
- Cars 클래스에서 입력 검증 로직 수정 (null, 공백, 빈 이름 예외 처리 추가)
- Stream API를 collect(Collectors.toList()) → .toList()로 변경
- CarsTest에 예외 케이스 추가